# simple-gazebo-robot

sr_description/: CHANGELOG.rst  CMakeLists.txt  package.xml  sr_robot.rviz
sr_description/launch/: debug.launch  delete.launch  description.launch  rviz.launch  update.launch
sr_description/urdf/: inertials.xacro  macros.xacro  materials.xacro  sr_robot.gazebo  sr_robot.xacro
sr_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
sr_gazebo/cfg/: controllers.yaml  param_stable.yaml
sr_gazebo/launch/: spawn.launch  sr_robot.launch  sr_robot_controller.launch  sr_robot_world.launch  world.launch
sr_gazebo/worlds/: darpa.world  empty.world  sr_robot.world  willow.world
sr_locomotor/: CHANGELOG.rst  CMakeLists.txt  package.xml
sr_locomotor/cfg/: locomotor.yaml
sr_locomotor/launch/: locomotor.launch  locomove_base.launch
sr_navigation/: CHANGELOG.rst  CMakeLists.txt  package.xml
sr_navigation/cfg/: amcl.yaml  mapping.yaml
sr_navigation/launch/: amcl.launch  mapping.launch
sr_navigation/map/willow/: map.pgm  map.yaml
sr_teleop/: CHANGELOG.rst  CMakeLists.txt  package.xml
sr_teleop/cfg/: joy.yaml  joy_mapping.yaml  smoother.yaml
sr_teleop/launch/: teleop.launch
