<?xml version="1.0"?>
<package format="2">
  <name>sr_gazebo</name>
  <version>0.0.0</version>
  <description>The sr_gazebo package</description>

  <maintainer email="peter@todo.todo">peter</maintainer>

  <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>controller_manager</exec_depend>
    <exec_depend>gazebo_ros</exec_depend>
    <exec_depend>sr_description</exec_depend>

  <!-- <export>
  </export> -->
</package>
