<?xml version="1.0"?>
<package format="2">
  <name>sr_navigation</name>
  <version>0.0.0</version>
  <description>The sr_navigation package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="peter@todo.todo">peter</maintainer>


  <license>D</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <exec_depend>amcl</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
 -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
