<?xml version="1.0"?>
<package format="2">
  <name>sr_teleop</name>
  <version>0.0.0</version>
  <description>The sr_teleop package</description>

  <maintainer email="peter@todo.todo">peter</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>joy_teleop</exec_depend>


  <!-- <export>
  </export> -->
</package>
