<?xml version="1.0"?>
<package format="2">
  <name>sr_teleop</name>
  <version>0.1.1</version>
  <description>The sr_teleop package</description>

  <maintainer email="piotnikiel@gmail.com">NiPeter</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>joy_teleop</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
